<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_hideable="true"
        app:behavior_peekHeight="300dp"
        android:background="@drawable/round_box"
        android:backgroundTint="@android:color/white"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/labeled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:textAlignment="center"
            tools:text="title"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvStatusLbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:text="@string/status"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labeled" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cirLoginButton"
            style="@style/loginButton"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/sure"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cirCancelButton"
            app:layout_constraintTop_toBottomOf="@+id/tvStatusLbl" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cirCancelButton"
            style="@style/loginButton"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/no_sure"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cirLoginButton"
            app:layout_constraintTop_toBottomOf="@+id/tvStatusLbl" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
