<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/topImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/shape" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            style="@style/headerTextPrimary"
            android:text="Welcome Back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topImg"
            app:layout_constraintBottom_toTopOf="@+id/logoImg"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
            app:layout_constraintBottom_toTopOf="@+id/containerInput"
            app:srcCompat="@drawable/login_draw" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImg">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_person"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/round_box"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:startIconDrawable="@drawable/ic_lock"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputEmail">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password_hint"
                    android:background="@drawable/round_box"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtForget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="26dp"
            android:onClick="viewForgotPassword"
            android:text="@string/forgot_password"
            android:textAlignment="viewEnd"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerInput" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cirLoginButton"
            style="@style/loginButton"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@+id/txtCreate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerInput"
            app:layout_constraintVertical_bias="0.434" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtCreate"
            style="@style/parent"
            android:layout_marginBottom="26dp"
            android:onClick="viewRegisterClicked"
            android:text="@string/login_signup"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
