<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_hideable="true"
        app:behavior_peekHeight="300dp"
        android:background="@drawable/bg_bottom_sheet"
        android:backgroundTint="@android:color/white"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/labeled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:text="title"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvStatusLbl"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toStartOf="@+id/tvStatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labeled"
            android:text="@string/status" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvStatusLbl"
            app:layout_constraintTop_toBottomOf="@+id/labeled"
            tools:text="@tools:sample/full_names" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCreateLbl"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toStartOf="@+id/tvCreate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStatusLbl"
            android:text="@string/create_date" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCreate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvCreateLbl"
            app:layout_constraintTop_toBottomOf="@+id/tvStatus"
            tools:text="@tools:sample/full_names" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUpdateLbl"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toStartOf="@+id/tvUpdate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCreateLbl"
            android:text="@string/update_date" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvUpdateLbl"
            app:layout_constraintTop_toBottomOf="@+id/tvCreate"
            tools:text="@tools:sample/full_names" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cirLoginButton"
            style="@style/loginButton"
            android:text="@string/dismiss"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUpdate" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
